fixed pre tag generation
code is now indented correctly

--- a/tasks/templates/_out.hbs
+++ b/tasks/templates/_out.hbs
@@ -33,9 +33,7 @@
           {{{this.comments}}}
         </div>
         <div class='code grid-60 mobile-grid-100 not-empty'>
-          <pre>
-            {{{this.code}}}
-          </pre>
+          <pre>{{{this.code}}}</pre>
         </div>
       </div>
       <div class='clear'>
