include italic and bold w/ Inconsolata font

--- a/tasks/templates/_out.hbs
+++ b/tasks/templates/_out.hbs
@@ -5,7 +5,7 @@
   <title>{{filename}} | ExplainJS by grunt-explainjs</title>
   <link rel="stylesheet" type="text/css" href="css/unsemantic.css"/>
   <link rel="stylesheet" type="text/css" href="css/explain.css"/>
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata|Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Inconsolata|Open+Sans:300italic,300,700' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1" />
 </head>
 
