--- a/tasks/templates/css/explain.css
+++ b/tasks/templates/css/explain.css
@@ -109,6 +109,10 @@ body {
 .comment p {
   padding: 0;
   margin: 0;
+  margin-top: 1em;
+}
+.comment p:first-child {
+  margin-top: 0;
 }
 .code {
   margin: 0;
